Revert back from Virtual threads to platform threads: Virtual threads were noticed to be expensive and affected performance greatly. Rework on windows decoration behaviour: handle minimize and maximize events differently. Fix sl4j no being able to load into memory: Add sl4j-simple to combat this as advised or noted on sl4j website.