@@ -18,7 +18,7 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 public class SpotyThreader {
-    private static final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+    private static final ExecutorService executorService = Executors.newFixedThreadPool(5);
 
     public static void spotyThreadPool(Runnable runnable) {
         executorService.submit(runnable);
@@ -27,5 +27,9 @@ public class SpotyThreader {
     public static void disposeSpotyThreadPool() {
         if (!executorService.isShutdown())
             executorService.shutdownNow();
+    }
+
+    public static Thread singleThreadCreator(String name, Runnable runnable) {
+        return Thread.ofPlatform().name(name).start(runnable);
     }
 }
